--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: perl6
 perl6:
     - latest
 install:
-    - rakudobrew build-panda
-    - panda installdeps .
+    - ./install-zef.sh
+    - zef installdeps .
