--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ perl6:
 
 install:
     - rakudobrew build zef
+    - zef --serial --force-install Test::Deeply::Relaxed
     - zef --serial --deps-only install .
