--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ perl6:
 
 install:
     - rakudobrew build zef
-    - zef --force-install Test::Deeply::Relaxed
-    - zef --serial --deps-only install .
+    - zef --deps-only install .
